rest-server/deployment/rest-deployment.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: cnn-feature-server
spec:
  selector:
    matchLabels:
      app: cnn-feature-server
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: cnn-feature-server
        tier: frontend
    spec:
      containers:
      - name: python-rest-server
        image: jayantduneja1234/rest-server:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 5000
---
