rest-server/deployment/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cnn-feature-server
  labels:
    app: cnn-feature-server
    tier: frontend
spec:
  # comment or delete the following line if you want to use a LoadBalancer 
  # type: NodePort
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  # type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: cnn-feature-server
    tier: frontend
---
