rest-server/deployment/rest-ingress.yaml
#
# See https://kubernetes.io/docs/concepts/services-networking/ingress/
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cnn-feature-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 64m
spec:
  rules:
  - host: 34.121.134.170.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cnn-feature-server
            port:
              number: 5002
#
# Your ingress rules here
#
